--- a/Bot/Bot.csproj
+++ b/Bot/Bot.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <LangVersion>latest</LangVersion>
-    <UserSecretsId>a1e12657-8b38-4066-bf7a-47ebdf9b02cf</UserSecretsId>
+    <UserSecretsId>0489ab04-4196-41f3-9a4d-88003836edb4</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,5 +18,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Helpers\" />
+    </ItemGroup>
 
 </Project>
